--- a/_theme_files/property.html
+++ b/_theme_files/property.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js"></script>
-    <title>Property Pulse | Find local rental properties</title>
+    <title>ListingHub | Find local rental properties</title>
   </head>
   <body>
     <nav class="bg-blue-700 border-b border-blue-500">
